# Cybar-ESP32

./: .gitignore  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  ble_spp_server.c  ble_spp_server.h  ble_spp_server_demo.c  ble_spp_server_demo.h  dash.html  diag_port.c  diag_port.h  egg.c  egg.h  hardware.c  hardware.h  lin.c  lin.h  lin_bar.c  lin_bar.h  lin_truck.c  lin_truck.h  main.c  mesh_node.c  mesh_node.h  password.example.h  patterns.c  patterns.h  pinout.h  system.c  system.h  user.c  user.h  web_mesh.c  web_mesh.h  web_server.c  web_server.h  wifi.c  wifi.h
main/data/: dash.html  dash.js  index.html  login.html  script.js  style.css
